branches/ConvertTo2010Express/src/MoonRoad/System.h


void WINAPI ReportSystemEvent(HWND hwnd, int eventId);