src/MoonRoad/MoonRoad.h




//Dock related
void WINAPI SetMouseDetected(BOOL value);

BOOL WINAPI GetMouseDetected();

void WINAPI GetDockRectangle(LPRECT rect);


BOOL WINAPI InstallMouseHook(HWND reportWindow);

void WINAPI RemoveMouseHook();

INT WINAPI InstallKeyboardHook(HWND reportWindow, UINT modifiers, UINT key);

void WINAPI RemoveKeyboardHook(HWND reportWindow, int id);
 
void WINAPI PauseMouseHook();

void WINAPI ResumeMouseHook();

void WINAPI PauseIntercept();

void WINAPI ResumeIntercept();


void WINAPI SetClickTracking(BOOL value);

void WINAPI SetMoveTracking(BOOL value);

void WINAPI SetWheelTracking(BOOL value);

void WINAPI SetClickTrackingWheel(BOOL value);

void WINAPI SetClickTrackingXButton(BOOL value);

void WINAPI SetInterceptClick(BOOL value);

BOOL WINAPI GetClickTrackingXButton();

BOOL WINAPI GetClickTrackingWheel();

BOOL WINAPI GetClickTracking();

BOOL WINAPI GetWheelTracking();

BOOL WINAPI GetMoveTracking();

BOOL WINAPI GetInterceptClick();

BOOL WINAPI GetHookPaused();

void WINAPI SetDesktopClick(BOOL value);

BOOL WINAPI GetDesktopClick();