branches/ConvertTo2010Express/src/MoonRoad/FileOperations.h


BOOL WINAPI FileIsImage(LPCWSTR fileName);

BOOL WINAPI FileIsLink(LPCWSTR fileName);

void WINAPI FileDelete(LPWSTR fileName);

BOOL WINAPI FileIsKrentoPackage(LPCWSTR fileName);

void WINAPI StripFileName(LPCWSTR fileName, LPWSTR fullName);

BOOL WINAPI FileCopy(LPWSTR oldName, LPWSTR newName);

BOOL WINAPI FullPath(LPWSTR fileName, LPWSTR fullName);