src/Laugris.Sage/Internal/MoonRoad.cs


        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileIsImage([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileIsKrentoPackage([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void FileDelete([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void StripFileName([MarshalAs(UnmanagedType.LPWStr)] string fileName, StringBuilder sb);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FullPath([MarshalAs(UnmanagedType.LPWStr)] string fileName, StringBuilder sb);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileCopy([MarshalAs(UnmanagedType.LPWStr)] string oldName, [MarshalAs(UnmanagedType.LPWStr)] string newName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool FileIsLink([MarshalAs(UnmanagedType.LPWStr)] string fileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void ReportSystemEvent(IntPtr hwnd, int eventId);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void DestroyFont(IntPtr hFont);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr MakeCompatibleBitmap(IntPtr source, int width, int height);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void DrawNativeBitmap(IntPtr src, IntPtr dst, int width, int height);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool StretchNativeBitmap(IntPtr src, IntPtr dst, int srcWidth, int srcHeight, int dstWidth, int dstHeight);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void AlphaBlendBitmap(IntPtr src, IntPtr hdc, int left, int top, int width, int height, int alpha);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern int GetTaskbarPosition();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern int DpiY();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void AlphaBlendNative(IntPtr hdcDest,
                             int xoriginDest,
                             int yoriginDest,
                             int wDest,
                             int hDest,
                             IntPtr hdcSrc,
                             int xoriginSrc,
                             int yoriginSrc,
                             int wSrc,
                             int hSrc,
                             byte alpha);

        /// <summary>
        /// Installs the keyboard hook.
        /// </summary>
        /// <param name="reportWindow">The report window.</param>
        /// <param name="modifiers">The key modifiers.</param>
        /// <param name="key">The key.</param>
        /// <returns>Hook id</returns>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern int InstallKeyboardHook(IntPtr reportWindow, int modifiers, Keys key);

        /// <summary>
        /// Removes the keyboard hook.
        /// </summary>
        /// <param name="reportWindow">The report window.</param>
        /// <param name="id">The hoook id.</param>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void RemoveKeyboardHook(IntPtr reportWindow, int id);

        /// <summary>
        /// Installs the mouse hook.
        /// </summary>
        /// <param name="reportWindow">The report window.</param>
        /// <returns></returns>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool InstallMouseHook(IntPtr reportWindow);

        /// <summary>
        /// Removes the mouse hook.
        /// </summary>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void RemoveMouseHook();


        /// <summary>
        /// Pauses the mouse hook.
        /// </summary>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void PauseMouseHook();

        /// <summary>
        /// Resumes the mouse hook.
        /// </summary>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void ResumeMouseHook();


        /// <summary>
        /// Pauses the mouse hook interceptor.
        /// </summary>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void PauseIntercept();

        /// <summary>
        /// Resumes the mouse hook interceptor.
        /// </summary>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void ResumeIntercept();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetDesktopClick();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void SetDesktopClick([MarshalAs(UnmanagedType.Bool)] bool value);

        /// <summary>
        /// Gets the move tracking.
        /// </summary>
        /// <returns></returns>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetMoveTracking();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetHookPaused();

        /// <summary>
        /// Gets the wheel tracking.
        /// </summary>
        /// <returns></returns>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetWheelTracking();

        /// <summary>
        /// Gets the click tracking.
        /// </summary>
        /// <returns></returns>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetClickTracking();

        /// <summary>
        /// Sets the wheel tracking.
        /// </summary>
        /// <param name="value">if set to <c>true</c> [value].</param>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void SetWheelTracking([MarshalAs(UnmanagedType.Bool)] bool value);

        /// <summary>
        /// Sets the move tracking.
        /// </summary>
        /// <param name="value">if set to <c>true</c> [value].</param>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void SetMoveTracking([MarshalAs(UnmanagedType.Bool)] bool value);

        /// <summary>
        /// Sets the click tracking wheel.
        /// </summary>
        /// <param name="value">if set to <c>true</c> [value].</param>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void SetClickTrackingWheel([MarshalAs(UnmanagedType.Bool)] bool value);

        /// <summary>
        /// Sets the click tracking X button.
        /// </summary>
        /// <param name="value">if set to <c>true</c> [value].</param>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void SetClickTrackingXButton([MarshalAs(UnmanagedType.Bool)] bool value);

        /// <summary>
        /// Gets the click tracking wheel.
        /// </summary>
        /// <returns></returns>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetClickTrackingWheel();

        /// <summary>
        /// Gets the click tracking X button.
        /// </summary>
        /// <returns></returns>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetClickTrackingXButton();

        /// <summary>
        /// Sets the click tracking.
        /// </summary>
        /// <param name="value">if set to <c>true</c> [value].</param>
        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void SetClickTracking([MarshalAs(UnmanagedType.Bool)] bool value);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void SetInterceptClick([MarshalAs(UnmanagedType.Bool)] bool value);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetInterceptClick();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void SetMouseDetected([MarshalAs(UnmanagedType.Bool)] bool value);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetMouseDetected();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void GetDockRectangle(ref RECT rect);
